[gd_scene load_steps=4 format=4 uid="uid://dxnfvlyobqj4"]

[ext_resource type="Script" uid="uid://cmp708y5yu43s" path="res://Scripts/Room/room_1.gd" id="1_hbcjl"]
[ext_resource type="TileSet" uid="uid://bs13m7xh4l7ni" path="res://Resource/TileSet/default.tres" id="1_r1wpu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80j4v"]
size = Vector2(704, 448)

[node name="Room1" type="Node2D"]
script = ExtResource("1_hbcjl")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAXAAAAAQADAAEAAAAWAAAAAQACAAAAAAAVAAAAAQACAAAAAAAUAAAAAQACAAAAAAATAAAAAQACAAAAAAASAAAAAQACAAAAAAARAAAAAQACAAAAAAAQAAAAAQACAAAAAAAPAAAAAQACAAAAAAAOAAAAAQACAAAAAAANAAAAAQABAAAAAAAKAAAAAQADAAAAAAAJAAAAAQACAAAAAAAIAAAAAQACAAAAAAAHAAAAAQACAAAAAAAGAAAAAQACAAAAAAAFAAAAAQACAAAAAAAEAAAAAQACAAAAAAADAAAAAQACAAAAAAACAAAAAQACAAAAAAABAAAAAQACAAAAAAAAAA8AAQABAAMAAAAAAA4AAQAAAAIAAAAAAA0AAQAAAAIAAAAAAAwAAQAAAAIAAAAAAAsAAQAAAAIAAAAAAAoAAQAAAAIAAAAAAAkAAQAAAAEAAAAAAAYAAQAAAAMAAAAAAAUAAQAAAAIAAAAAAAQAAQAAAAIAAAAAAAMAAQAAAAIAAAAAAAIAAQAAAAIAAAAAAAEAAQAAAAIAAAAAAAAAAQABAAEAAAAXAA8AAQADAAMAAAAWAA8AAQACAAAAAAAVAA8AAQACAAAAAAAUAA8AAQACAAAAAAATAA8AAQACAAAAAAASAA8AAQACAAAAAAARAA8AAQACAAAAAAAQAA8AAQACAAAAAAAPAA8AAQACAAAAAAAOAA8AAQACAAAAAAANAA8AAQABAAAAAAAKAA8AAQADAAAAAAAJAA8AAQACAAAAAAAIAA8AAQACAAAAAAAHAA8AAQACAAAAAAAGAA8AAQACAAAAAAAFAA8AAQACAAAAAAAEAA8AAQACAAAAAAADAA8AAQACAAAAAAACAA8AAQACAAAAAAABAA8AAQACAAAAAAAXAAEAAQAAAAIAAAAXAAIAAQAAAAIAAAAXAAMAAQAAAAIAAAAXAAQAAQAAAAIAAAAXAAUAAQAAAAIAAAAXAAYAAQAAAAMAAAAXAAkAAQAAAAEAAAAXAAoAAQAAAAIAAAAXAAsAAQAAAAIAAAAXAAwAAQAAAAIAAAAXAA0AAQAAAAIAAAAXAA4AAQAAAAIAAAAUAAMAAQADAAAAAAATAAMAAQACAAAAAAASAAMAAQACAAAAAAARAAMAAQACAAAAAAAQAAMAAQACAAAAAAAPAAMAAQACAAAAAAAOAAMAAQACAAAAAAANAAMAAQACAAAAAAAMAAMAAQACAAAAAAALAAMAAQACAAAAAAAKAAMAAQACAAAAAAAJAAMAAQACAAAAAAAIAAMAAQACAAAAAAAHAAMAAQACAAAAAAAGAAMAAQACAAAAAAAFAAMAAQACAAAAAAAEAAMAAQACAAAAAAADAAMAAQABAAAAAAATAAcAAQALAAAAAAASAAcAAQAKAAAAAAARAAcAAQAKAAAAAAAQAAcAAQAKAAAAAAAPAAcAAQAKAAAAAAAOAAcAAQAKAAAAAAANAAcAAQAKAAAAAAAMAAcAAQAKAAAAAAALAAcAAQAKAAAAAAAKAAcAAQAKAAAAAAAJAAcAAQAKAAAAAAAIAAcAAQAKAAAAAAAHAAcAAQAKAAAAAAAGAAcAAQAKAAAAAAAFAAcAAQAKAAAAAAAEAAcAAQAIAAAAAAAUAAwAAQADAAAAAAATAAwAAQACAAAAAAASAAwAAQACAAAAAAARAAwAAQACAAAAAAAQAAwAAQACAAAAAAAPAAwAAQACAAAAAAAOAAwAAQACAAAAAAANAAwAAQACAAAAAAAMAAwAAQACAAAAAAALAAwAAQACAAAAAAAKAAwAAQACAAAAAAAJAAwAAQACAAAAAAAIAAwAAQACAAAAAAAHAAwAAQACAAAAAAAGAAwAAQACAAAAAAAFAAwAAQACAAAAAAAEAAwAAQACAAAAAAADAAwAAQABAAAAAAATAAgAAQALAAMAAAASAAgAAQAJAAMAAAARAAgAAQAJAAMAAAAQAAgAAQAJAAMAAAAPAAgAAQAJAAMAAAAOAAgAAQAJAAMAAAANAAgAAQAJAAMAAAAMAAgAAQAJAAMAAAALAAgAAQAJAAMAAAAKAAgAAQAJAAMAAAAJAAgAAQAJAAMAAAAIAAgAAQAJAAMAAAAHAAgAAQAJAAMAAAAGAAgAAQAJAAMAAAAFAAgAAQAJAAMAAAAEAAgAAQAIAAMAAAA=")
tile_set = ExtResource("1_r1wpu")
metadata/_edit_lock_ = true

[node name="LeftDoor" type="Marker2D" parent="."]
position = Vector2(0, 256)
metadata/_edit_lock_ = true

[node name="UpDoor" type="Marker2D" parent="."]
position = Vector2(384, 0)
metadata/_edit_lock_ = true

[node name="DownDoor" type="Marker2D" parent="."]
position = Vector2(384, 512)
metadata/_edit_lock_ = true

[node name="RightDoor" type="Marker2D" parent="."]
position = Vector2(768, 256)
metadata/_edit_lock_ = true

[node name="EnemySpawnpoints" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Marker2D" type="Marker2D" parent="EnemySpawnpoints"]
position = Vector2(384, 64)
metadata/_edit_lock_ = true

[node name="Marker2D2" type="Marker2D" parent="EnemySpawnpoints"]
position = Vector2(384, 184)
metadata/_edit_lock_ = true

[node name="Marker2D3" type="Marker2D" parent="EnemySpawnpoints"]
position = Vector2(384, 344)
metadata/_edit_lock_ = true

[node name="Marker2D4" type="Marker2D" parent="EnemySpawnpoints"]
position = Vector2(384, 456)
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(384, 256)
shape = SubResource("RectangleShape2D_80j4v")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
